--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@
     min-width: 100%;
     min-height: 100%;
   }
+
+  #filledbg{
+    position: fixed; 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-height: 100%;
+    z-index: -100;
+    opacity: 0.8;
+  }
